--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_InVR
+LastExecutedPlayModeType=PlayMode_Simulate
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -83,7 +83,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/IntroScene/Tree
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -111,7 +111,6 @@ LastLevel=/Game/_Scenes/IntroScene
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Materials/IntroScene/Moon/MoonImage1_Mat.MoonImage1_Mat
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -136,7 +135,7 @@ BP_PickupCube_C.Cooking=True
 BP_PickupCube_C.Input=True
 BP_PickupCube_C.Actor=True
 StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=False
+StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
@@ -181,7 +180,7 @@ MotionControllerPawn_C.Rendering=True
 MotionControllerPawn_C.Input=True
 MotionControllerPawn_C.Actor=True
 PostProcessVolume.TransformCommon=True
-PostProcessVolume.Color Grading=True
+PostProcessVolume.Color Grading=False
 PostProcessVolume.Film=True
 PostProcessVolume.Mobile Tonemapper=True
 PostProcessVolume.Lens=True
@@ -452,11 +451,17 @@ SpotLight.DistanceFieldShadows=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
 
 [DetailPropertyExpansion]
-Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush=
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -467,23 +472,32 @@ WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/IntroScene/Tree/DeadTree1.DeadTree1;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearMaterials/middleage_lightskinned_male_diffuse.middleage_lightskinned_male_diffuse;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_teeth_baseMesh.SeveredHeadFearV1_teeth_baseMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_severedhead_fearv1Mesh.SeveredHeadFearV1_severedhead_fearv1Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_low-polyMesh.SeveredHeadFearV1_low-polyMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_eyebrow009Mesh.SeveredHeadFearV1_eyebrow009Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/SeveredHeadAngryV1_eyebrow008Mesh.SeveredHeadAngryV1_eyebrow008Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryHeadMaterials/short04_diffuse.short04_diffuse;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/AngryHeadMaterials/middleage_lightskinned_male_diffuse2.middleage_lightskinned_male_diffuse2;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/SeveredHeadAngryV1_teeth_shape02Mesh.SeveredHeadAngryV1_teeth_shape02Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/SeveredHeadAngryV1_short04Mesh.SeveredHeadAngryV1_short04Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/SeveredHeadAngryV1_severedhead_angryv1Mesh.SeveredHeadAngryV1_severedhead_angryv1Mesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/SeveredHeadAngryV1_high-polyMesh.SeveredHeadAngryV1_high-polyMesh;
+RecentlyPlaced=/Game/FBX_Models/Bowling/Pins/Pin_Materials/middleage_lightskinned_female_diffuse.middleage_lightskinned_female_diffuse;
+RecentlyPlaced=/Game/FBX_Models/Bowling/Pins/Pin_Materials/eyelashes04_Mat.eyelashes04_Mat;
+RecentlyPlaced=/Game/FBX_Models/Bowling/Pins/Pin_Materials/eyelashes04.eyelashes04;
+RecentlyPlaced=/Game/FBX_Models/Bowling/Pins/Pin_Materials/eyebrow001.eyebrow001;
+RecentlyPlaced=/Game/FBX_Models/Bowling/Pins/Pin_Materials/braid01_diffuse.braid01_diffuse;
+RecentlyPlaced=/Game/FBX_Models/Bowling/Pins/BowlingpinGownV1.BowlingpinGownV1;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Materials/IntroScene/Moon/AtmosphereMoon1_Mat.AtmosphereMoon1_Mat;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Materials/IntroScene/Ocean/M_OceanBlood.M_OceanBlood;
-RecentlyPlaced=/Game/WaterPlane/Ocean/Materials/M_OceanWater_1.M_OceanWater_1;
-RecentlyPlaced=/Game/Materials/IntroScene/Moon/MoonImage1_Mat.MoonImage1_Mat;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Moon/Moon.Moon;
-RecentlyPlaced=/Game/Materials/IntroScene/Moon/MoonImage1.MoonImage1;
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=6.000 Y=2.000
+ScreenPosition=X=13.000 Y=4.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -505,7 +519,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/_Original Assets/IntroTicketBooth/Moon.fbx
+GenericImport=F:/_CIU/_Original Assets/IntroTicketBooth/Tree/DeadTree1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -1095,6 +1109,8 @@ MovieSceneCapture.TimeStamp=2018.06.15-11.02.35
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.06.15-11.02.30
 ExternalImagePicker.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2018.06.15-11.02.40
+TextureEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1109,9 +1125,11 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportMaterials=False
+bImportTextures=False
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Lens.Lens,
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1119,12 +1137,12 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=True
+bAutoGenerateCollision=False
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
 bImportMeshLODs=False
-NormalImportMethod=FBXNIM_ImportNormals
+NormalImportMethod=FBXNIM_ComputeNormals
 NormalGenerationMethod=MikkTSpace
 bConvertScene=True
 bForceFrontXAxis=False
@@ -1180,6 +1198,7 @@ bConvertSceneUnit=False
 /Game/Materials/IntroScene/Moon/MoonImage1_Mat.MoonImage1_Mat=0
 /Game/Materials/IntroScene/Ocean/M_OceanBlood.M_OceanBlood=0
 /Game/Materials/IntroScene/Moon/AtmosphereMoon1_Mat.AtmosphereMoon1_Mat=0
+/Game/FBX_Models/Bowling/FearHead/FearMaterials/eyebrow009.eyebrow009=1
 
 [MaterialEditor]
 PrimType=1
@@ -1190,5 +1209,7 @@ WorldSettings.World=True
 WorldSettings.PrecomputedVisibility=True
 WorldSettings.Tick=True
 PostProcessVolume.Mobile Tonemapper=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Mesh=True
 
 
