--- a/CIU_CarnEvil_Final/Config/DefaultEngine.ini
+++ b/CIU_CarnEvil_Final/Config/DefaultEngine.ini
@@ -26,7 +26,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=False
-vr.InstancedStereo=True
+vr.InstancedStereo=False
 r.SeparateTranslucency=0
 r.HZBOcclusion=0
 r.EyeAdaptionQuality=0
@@ -106,3 +106,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
