--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -474,7 +474,7 @@ Actor.Rendering=True
 Actor.Input=True
 Actor.Actor=True
 Emitter.TransformCommon=True
-Emitter.Particles=True
+Emitter.Particles=False
 Emitter.EmitterActions=True
 Emitter.Materials=True
 Emitter.Attachment=True
@@ -519,6 +519,17 @@ StaticMeshComponent.Cooking=True
 Generic.Surface Materials=True
 Generic.Geometry=True
 Generic.Surface Properties=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -539,26 +550,26 @@ SceneComponent="\"Object.Cable.AttachEndTo\" "
 ActorComponent="\"Object.Cable.AttachEndTo\" "
 
 [PlacementMode]
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK_Sprite.LOGO_BLACK_Sprite;
-RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK.LOGO_BLACK;
-RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire/P_Fire_TrapBossEnd_mobile.P_Fire_TrapBossEnd_mobile;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Pillar/IntroTicketBoothPillarV1_Cube_002.IntroTicketBoothPillarV1_Cube_002;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Pillar/IntroTicketBoothPillarV1_Cube_001.IntroTicketBoothPillarV1_Cube_001;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Pillar/IntroTicketBoothPillarV1_Cube.IntroTicketBoothPillarV1_Cube;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Pillar/IntroTicketBoothPillarV1_Cube_003.IntroTicketBoothPillarV1_Cube_003;
-RecentlyPlaced=/Game/Sprites_Decals/_GeneralUse/Player_Placement/PlayerPlacementMat_Sprite.PlayerPlacementMat_Sprite;
-RecentlyPlaced=/Game/Sprites_Decals/_GeneralUse/Wall_Tent/OriginalAsset_Carn_Wall_Sprite.OriginalAsset_Carn_Wall_Sprite;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Tree/DeadTree1.DeadTree1;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/FearMaterials/middleage_lightskinned_male_diffuse.middleage_lightskinned_male_diffuse;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_teeth_baseMesh.SeveredHeadFearV1_teeth_baseMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_severedhead_fearv1Mesh.SeveredHeadFearV1_severedhead_fearv1Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_low-polyMesh.SeveredHeadFearV1_low-polyMesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/FearHead/SeveredHeadFearV1_eyebrow009Mesh.SeveredHeadFearV1_eyebrow009Mesh;
-RecentlyPlaced=/Game/FBX_Models/Bowling/AngryHead/SeveredHeadAngryV1_eyebrow008Mesh.SeveredHeadAngryV1_eyebrow008Mesh;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cylinder_002.RustedPipeV1_Cylinder_002;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cylinder_001.RustedPipeV1_Cylinder_001;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cylinder.RustedPipeV1_Cylinder;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cube_002.RustedPipeV1_Cube_002;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cube_001.RustedPipeV1_Cube_001;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cube.RustedPipeV1_Cube;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_Straight/RustedPipeV1_Cylinder_003.RustedPipeV1_Cylinder_003;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cylinder_003.RustedPipeTShapeV1_Cylinder_003;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cylinder_002.RustedPipeTShapeV1_Cylinder_002;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cylinder_001.RustedPipeTShapeV1_Cylinder_001;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cylinder.RustedPipeTShapeV1_Cylinder;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_008.RustedPipeTShapeV1_Cube_008;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_007.RustedPipeTShapeV1_Cube_007;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_006.RustedPipeTShapeV1_Cube_006;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_005.RustedPipeTShapeV1_Cube_005;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_004.RustedPipeTShapeV1_Cube_004;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_003.RustedPipeTShapeV1_Cube_003;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_002.RustedPipeTShapeV1_Cube_002;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube_001.RustedPipeTShapeV1_Cube_001;
+RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/Pipe_T/RustedPipeTShapeV1_Cube.RustedPipeTShapeV1_Cube;
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -586,7 +597,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/Prototype CarnEvil/Images/CarnEvil_Logo/LOGO BLACK.png
+GenericImport=F:/_CIU/_Original Assets/Maze/Piping_Rusty/rustedpiping/RustedPipeTShapeV1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -1178,6 +1189,8 @@ ExternalImagePicker.TimeStamp=2018.06.15-11.02.30
 ExternalImagePicker.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2018.06.15-11.02.40
 TextureEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.06.15-11.02.40
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1266,6 +1279,9 @@ bConvertSceneUnit=False
 /Game/Materials/IntroScene/Ocean/M_OceanBlood.M_OceanBlood=0
 /Game/Materials/IntroScene/Moon/AtmosphereMoon1_Mat.AtmosphereMoon1_Mat=0
 /Game/FBX_Models/Bowling/FearHead/FearMaterials/eyebrow009.eyebrow009=1
+/Game/FBX_Models/Bowling/Pins/BowlingpinGownV1.BowlingpinGownV1=1
+/Game/ParticleEffects/M_FlowingLava_HOT_red_Cool.M_FlowingLava_HOT_red_Cool=0
+/Game/M_FlowingLava_HOT_red_Cool.M_FlowingLava_HOT_red_Cool=1
 
 [MaterialEditor]
 PrimType=1
