--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,7 +116,6 @@ LastLevel=/Game/_Scenes/Bowling
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/_Scenes/Bowling.Bowling:PersistentLevel.Bowling
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1059,6 +1058,8 @@ InterpTrackToggle.InterpTrackToggle=True
 InterpTrackToggle.InterpTrack=True
 InterpTrackVisibility.InterpTrackVisibility=True
 InterpTrackVisibility.InterpTrack=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1085,9 +1086,9 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Heart.BP_Heart;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/HeartBall/BP_Bat.BP_Bat;
 RecentlyPlaced=/Game/FBX_Models/HeartBall/Bat/HeartBallLegBoneBatV2.HeartBallLegBoneBatV2;
@@ -1110,7 +1111,7 @@ RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Combat_Lightning/P_DOT_Ligh
 LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=10.000 Y=6.000
+ScreenPosition=X=18.000 Y=8.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1752,6 +1753,7 @@ bImportTextures=False
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Lens.Lens,
 SphereComponent=SphereComponent.Collision.Collision,
+K2Node_CustomEvent=
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1837,6 +1839,7 @@ bConvertSceneUnit=False
 /Game/FBX_Models/HeartBall/Heart/HumanHeartV3Smooth_Cube.HumanHeartV3Smooth_Cube=0
 /Game/Blueprints/HeartBall/BP_Heart.BP_Heart=0
 /Game/_Scenes/HeartBall.HeartBall:PersistentLevel.HeartBall=0
+/Game/_Scenes/Bowling.Bowling:PersistentLevel.Bowling=0
 
 [MaterialEditor]
 PrimType=1
