--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,6 +118,7 @@ LastLevel=/Game/_Scenes/KnifeThrow
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/_Scenes/KnifeThrow.KnifeThrow:PersistentLevel.KnifeThrow
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1096,6 +1097,7 @@ KnifeThrow_C.Tick=True
 KnifeThrow_C.Replication=True
 KnifeThrow_C.Input=True
 KnifeThrow_C.Actor=True
+KnifeThrow_C.Default=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1144,7 +1146,7 @@ RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLA
 RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Gates/P_Gate_Green_Locked_01.P_Gate_Green_Locked_01;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [RootWindow]
 ScreenPosition=X=4.000 Y=3.000
