--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1126,6 +1126,8 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1.Tombstone1;
+RecentlyPlaced=/Game/FBX_Models/Maze/BodyBag/BodyBagV1.BodyBagV1;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Tree/DeadTree1.DeadTree1;
 RecentlyPlaced=/Game/Materials/_GeneralUse/FunkyWall1/Tessellation_FunkyWall1_Mat.Tessellation_FunkyWall1_Mat;
@@ -1144,14 +1146,12 @@ RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cube_002.Sm
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cube_001.SmallBoat_IntroScene_Cube_001;
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cube.SmallBoat_IntroScene_Cube;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
-RecentlyPlaced=/Game/Blueprints/KnifeThrow/BP_Knife.BP_Knife;
 
 [MessageLog]
 LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=203.000 Y=48.000
+ScreenPosition=X=0.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1169,11 +1169,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/willj/Documents/GitHub/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
+UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=../../../../../../Users/willj/Desktop/Carnevil Objects/Blender/Machete/MacheteV7.fbx
+GenericImport=F:/_CIU/_Original Assets/Maze/Tombstones/Tombstone1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
