--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -88,7 +88,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Materials/_BaseMaterial_Templates
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1124,12 +1124,12 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersNotSmooth.Tunnel_BentEndforCornersNotSmooth;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersSmooth.Tunnel_BentEndforCornersSmooth;
-RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelCornerV1smooth.TunnelCornerV1smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelCornerV1notsmooth.TunnelCornerV1notsmooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1.Tombstone1;
