--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1112,7 +1112,7 @@ Object=
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
-Info="\"Object.Lightmass.LightmassSettings\" "
+Info=
 CableComponent="\"Object.Cable.AttachEndTo\" "
 MeshComponent=
 PrimitiveComponent=
@@ -1126,8 +1126,8 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
+RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelStraightSegment_Smooth.TunnelStraightSegment_Smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersSmooth.Tunnel_BentEndforCornersSmooth;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
@@ -1148,7 +1148,7 @@ RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cylinder.Sm
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cube_007.SmallBoat_IntroScene_Cube_007;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
