--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/Tunnel
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -114,10 +114,10 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/IntroScene
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1148,12 +1148,12 @@ RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cylinder.Sm
 RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cube_007.SmallBoat_IntroScene_Cube_007;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1169,7 +1169,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
+UNR=../../../../../../Users/willj/Documents/GitHub/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_Scenes
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
