--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game/Materials/_BaseMaterial_Templates
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1102,9 +1102,9 @@ MaterialExpressionTextureObjectParameter.MaterialExpressionTextureBase=True
 MaterialExpressionTextureObjectParameter.MaterialExpression=True
 
 [DetailPropertyExpansion]
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavModifierVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1126,29 +1126,29 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
+RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_MistRising_light.P_MistRising_light;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Mist_mobile.P_Mist_mobile;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_light_StrongWind.P_Dust_light_StrongWind;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_light.P_Dust_light;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_Heavy_StrongWind.P_Dust_Heavy_StrongWind;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_Heavy.P_Dust_Heavy;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fog/P_Dust_groundCoat.P_Dust_groundCoat;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire/P_Env_Fire_Grate_01.P_Env_Fire_Grate_01;
+RecentlyPlaced=/Game/InfinityBladeEffects/Effects/FX_Ambient/Fire/P_Fire_largeArea_Trans_mobile.P_Fire_largeArea_Trans_mobile;
+RecentlyPlaced=/Game/ParticleEffects/P_Fire_TrapBossEnd_mobile.P_Fire_TrapBossEnd_mobile;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelStraightSegment_Smooth.TunnelStraightSegment_Smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersSmooth.Tunnel_BentEndforCornersSmooth;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersNotSmooth.Tunnel_BentEndforCornersNotSmooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelCornerV1smooth.TunnelCornerV1smooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelCornerV1notsmooth.TunnelCornerV1notsmooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1.Tombstone1;
-RecentlyPlaced=/Game/FBX_Models/Maze/BodyBag/BodyBagV1.BodyBagV1;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Tree/DeadTree1.DeadTree1;
-RecentlyPlaced=/Game/Materials/_GeneralUse/FunkyWall1/Tessellation_FunkyWall1_Mat.Tessellation_FunkyWall1_Mat;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Torus_002.SmallBoat_IntroScene_Torus_002;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Torus_001.SmallBoat_IntroScene_Torus_001;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cylinder_002.SmallBoat_IntroScene_Cylinder_002;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cylinder_001.SmallBoat_IntroScene_Cylinder_001;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cylinder.SmallBoat_IntroScene_Cylinder;
-RecentlyPlaced=/Game/FBX_Models/IntroScene/Boat/SmallBoat_IntroScene_Cube_007.SmallBoat_IntroScene_Cube_007;
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
@@ -1777,6 +1777,7 @@ DistCurveEditor.LastCompileMethod=Unknown
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
 bShowMobileStats=False
+bRealtimeMaterialViewport=False
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
