--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Materials/_BaseMaterial_Templates
+ContentBrowserTab1.SelectedPaths=/Game/_Scenes
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1151,9 +1151,9 @@ RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1.Tombstone1;
 LastLogListing=MapCheck
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=0.000
+ScreenPosition=X=110.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
