--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,8 +76,8 @@ CurrentPosGridSize=0
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/IntroScene
+MRUItem0=/Game/_Scenes/IntroScene
+MRUItem1=/Game/_Scenes/Maze
 MRUItem2=/Game/_Scenes/Bowling
 MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/HeartBall
@@ -90,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game/Sprites_Decals/IntroScene/Parahna
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -114,7 +114,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/IntroScene
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1126,6 +1126,8 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV2_Sprite.ParahnaV2_Sprite;
+RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV1_Sprite.ParahnaV1_Sprite;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Flat_Template_Mat.Flat_Template_Mat;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1144,14 +1146,12 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersSmooth.Tunne
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersNotSmooth.Tunnel_BentEndforCornersNotSmooth;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelCornerV1smooth.TunnelCornerV1smooth;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelCornerV1notsmooth.TunnelCornerV1notsmooth;
-RecentlyPlaced=/Game/FBX_Models/Maze/TombStones/Tombstone1.Tombstone1;
 
 [MessageLog]
 LastLogListing=MapCheck
 
 [RootWindow]
-ScreenPosition=X=110.000 Y=0.000
+ScreenPosition=X=1.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -1926,7 +1926,7 @@ SelectedSnapMode=3
 SnapTimeToFrames=False
 FixedTimeStepPlayback=False
 PreferFrameNumbers=True
-SnapEnabled=True
+SnapEnabled=False
 ShowTimeCursorPosForAllKeys=False
 InitialInterpMode2=5
 
