--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -465,7 +465,7 @@ Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
 PaperSpriteActor.TransformCommon=True
-PaperSpriteActor.Sprite=True
+PaperSpriteActor.Sprite=False
 PaperSpriteActor.Materials=True
 PaperSpriteActor.Physics=True
 PaperSpriteActor.Collision=True
@@ -1126,6 +1126,7 @@ StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV3_Sprite.ParahnaV3_Sprite;
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV2_Sprite.ParahnaV2_Sprite;
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/Parahna/ParahnaV1_Sprite.ParahnaV1_Sprite;
 RecentlyPlaced=/Game/Materials/_BaseMaterial_Templates/Tessellation_Template_Mat.Tessellation_Template_Mat;
@@ -1145,7 +1146,6 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelStraightSegment_Smooth.TunnelS
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersSmooth.Tunnel_BentEndforCornersSmooth;
 RecentlyPlaced=/Game/Materials/_GeneralUse/Cement_Speckle1/Flat_Cement_Speckle1_Mat.Flat_Cement_Speckle1_Mat;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/Tunnel_BentEndforCornersNotSmooth.Tunnel_BentEndforCornersNotSmooth;
-RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/TunnelCornerV1smooth.TunnelCornerV1smooth;
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1173,7 +1173,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/_Original Assets/Maze/TunnelStraightSegment_Smooth.fbx
+GenericImport=F:/_CIU/_Original Assets/IntroTicketBooth/Parahna/ParahnaV3.png
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
