--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,7 +118,6 @@ LastLevel=/Game/_Scenes/ClownBall
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/_Scenes/ClownBall.ClownBall:PersistentLevel.ClownBall
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1148,6 +1147,7 @@ REINST_BP_EyeBall_C_92.Tags=True
 REINST_BP_EyeBall_C_92.ComponentReplication=True
 REINST_BP_EyeBall_C_92.Cooking=True
 REINST_BP_EyeBall_C_92.Events=True
+ClownBall_C.Default=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1201,7 +1201,7 @@ LastLogListing=MapCheck
 [RootWindow]
 ScreenPosition=X=1.000 Y=6.000
 WindowSize=X=1577.000 Y=867.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1939,6 +1939,7 @@ bConvertSceneUnit=False
 /Game/FBX_Models/Tools/Kitchen_Knife/KitchenKnifeV4_Smooth.KitchenKnifeV4_Smooth=1
 /Game/Sprites_Decals/IntroScene/BatFlying/BatFlying3.BatFlying3=0
 /Game/Blueprints/ClownBall/BP_EyeBall.BP_EyeBall=0
+/Game/_Scenes/ClownBall.ClownBall:PersistentLevel.ClownBall=0
 
 [MaterialEditor]
 PrimType=1
